Finally got some hacky (yet apparently fairly standard) javscript to allow for the main div to resize and let text overflow, even though it doesn't appear to have a fixed size.

--- a/src/HtmlJs/home.css
+++ b/src/HtmlJs/home.css
@@ -44,7 +44,7 @@ Nav Bar Views
   padding-left: .2em;
 }
 
-.nav .top-level-dropdown a, .nav #helpfulLinks a {
+.nav .top-level-dropdown a, .nav .helpfulLinks a {
   margin: 0;
   text-decoration: none;
   white-space: nowrap;
@@ -76,9 +76,17 @@ Nav Bar Views
 
 .nav .second-level-dropdown > li:hover { background: #CCCCCC; }
 
-.nav #helpfulLinks {
+.nav .helpfulLinks {
   margin: 0;
   justify-content: flex-end;
+}
+
+.nav .helpfulLinks li:hover {
+  background: #CCCCCC;
+}
+
+.nav .helpfulLinks li a:hover {
+  color: #000000;
 }
 /*------------*/
 
@@ -146,8 +154,8 @@ Tree View and Main View
   flex-grow: 1;  /* TODO: May not need this since implementing '.wrapper' */
   margin: 0;
   padding: 0;
-  /*height: 100%;*/
-  /*overflow: auto;*/
+  height: 40em;
+  overflow: auto;
 }
 
 .wrapper #main p {
